--- a/roles/fedora_base/tasks/hostname.yml
+++ b/roles/fedora_base/tasks/hostname.yml
@@ -1,7 +1,7 @@
 ---
 - name: Set hostname
   when: hostname | length > 0 and domain | length > 0
-  become: yes
+  become: true
   ansible.builtin.hostname:
     name: '{{ hostname }}.{{ domain }}'
     use: systemd
