--- a/roles/fedora_workstation/tasks/vscode.yml
+++ b/roles/fedora_workstation/tasks/vscode.yml
@@ -1,16 +1,16 @@
 ---
 - name: Add VSCode Repo
-  become: yes
+  become: true
   ansible.builtin.yum_repository:
     name: vscode
     description: Visual Studio Code repo
     baseurl: https://packages.microsoft.com/yumrepos/vscode
-    gpgcheck: yes
+    gpgcheck: true
     gpgkey: https://packages.microsoft.com/keys/microsoft.asc
   notify: update_package_cache
 
 - name: Install Visual Studio Code
-  become: yes
+  become: true
   ansible.builtin.dnf:
     state: present
     name:
