--- a/roles/mikeandwan_us/tasks/maw_host_init.yml
+++ b/roles/mikeandwan_us/tasks/maw_host_init.yml
@@ -1,9 +1,9 @@
 ---
 - name: ensure asset directories exist
-  become: yes
+  become: true
   ansible.builtin.file:
     path: "{{ item }}"
-    #recurse: yes
+    #recurse: true
     state: directory
   loop: "{{ asset_dirs }}"
 
