--- a/roles/mikeandwan_us/tasks/maw_postgres_set_role_password.yml
+++ b/roles/mikeandwan_us/tasks/maw_postgres_set_role_password.yml
@@ -4,8 +4,8 @@
     pod: "{{ mawus_config.podman_podname }}"
     image: "docker.io/postgres:{{ mawus_config.version_postgres }}"
     env_file: "{{ mawus_config.podman_env_dir }}/maw-postgres.env"
-    interactive: yes
-    rm: yes
+    interactive: true
+    rm: true
     state: started
     command:
       - psql
