--- a/roles/service_accounts/tasks/main.yml
+++ b/roles/service_accounts/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Add Service Accounts
-  become: yes
+  become: true
   ansible.builtin.user:
     name: "{{ item.username }}"
     groups: "{{ item.groups }}"
