--- a/roles/sshd/tasks/add_users.yml
+++ b/roles/sshd/tasks/add_users.yml
@@ -1,6 +1,6 @@
 ---
 - name: add ssh public keys
-  become: yes
+  become: true
   ansible.builtin.authorized_key:
     user: "{{ username }}"
     state: present
@@ -10,22 +10,22 @@
 #   the first will try to find the current user in the AllowUsers line
 #   the second will add the user if grep returns 1 indicating the line did not match
 - name: check if user is allowed in sshd_config
-  become: yes
+  become: true
   ansible.builtin.command:
     argv:
       - grep
       - -E
       - '^AllowUsers.*\b{{ username }}\b.*$'
       - /etc/ssh/sshd_config
-  ignore_errors: yes
+  ignore_errors: true
   register: grep_allowusers
 
 - name: add user to sshd AllowUsers
-  become: yes
+  become: true
   ansible.builtin.lineinfile:
     path: "/etc/ssh/sshd_config"
-    backup: yes
-    backrefs: yes
+    backup: true
+    backrefs: true
     regex: "^AllowUsers\\s+(.*)$"
     line: "AllowUsers \\1 {{ username }}"
     state: present
