--- a/host_vars/lvmtest.yml
+++ b/host_vars/lvmtest.yml
@@ -11,7 +11,7 @@ ddclient_config:
     groups:
     subuid: 200000-265536
     subgid: 200000-265536
-    enable_linger: yes
+    enable_linger: true
   namecheap_password: "{{ vault_namecheap_password }}"
 
 # mikeandwan.us
@@ -22,7 +22,7 @@ mawus_config:
     password: "{{ vault_password_lvmtest_svc_www_maw }}"
     subuid: 300000-365536
     subgid: 300000-365536
-    enable_linger: yes
+    enable_linger: true
 
 # subuid / subgid hopefully coming to user module eventually
 # https://github.com/ansible/ansible/issues/68199
