--- a/roles/fedora_workstation/tasks/aws_cli.yml
+++ b/roles/fedora_workstation/tasks/aws_cli.yml
@@ -12,12 +12,12 @@
 
 - name: Unzip archive
   ansible.builtin.unarchive:
-    remote_src: yes
+    remote_src: true
     src: aws_cli/awscliv2.zip
     dest: aws_cli
 
 - name: Install AWS CLI
-  become: yes
+  become: true
   ansible.builtin.command:
     cmd: aws_cli/aws/install
 
