--- a/roles/fedora_workstation/tasks/azure_cli.yml
+++ b/roles/fedora_workstation/tasks/azure_cli.yml
@@ -1,16 +1,16 @@
 ---
 - name: Add Azure CLI Repo
-  become: yes
+  become: true
   ansible.builtin.yum_repository:
     name: azure_cli
     description: Azure CLI
     baseurl: https://packages.microsoft.com/yumrepos/azure-cli
-    gpgcheck: yes
+    gpgcheck: true
     gpgkey: https://packages.microsoft.com/keys/microsoft.asc
   notify: update_package_cache
 
 - name: Install Azure CLI
-  become: yes
+  become: true
   ansible.builtin.dnf:
     state: present
     name:
