--- a/roles/fedora_workstation/tasks/ms_teams.yml
+++ b/roles/fedora_workstation/tasks/ms_teams.yml
@@ -1,16 +1,16 @@
 ---
 - name: Add Teams Repo
-  become: yes
+  become: true
   ansible.builtin.yum_repository:
     name: teams
     description: MS Teams repo
     baseurl: https://packages.microsoft.com/yumrepos/ms-teams
-    gpgcheck: yes
+    gpgcheck: true
     gpgkey: https://packages.microsoft.com/keys/microsoft.asc
   notify: update_package_cache
 
 - name: Install MS Teams
-  become: yes
+  become: true
   ansible.builtin.dnf:
     state: present
     name:
