--- a/roles/mikeandwan_us/tasks/maw_postgres_restore_db.yml
+++ b/roles/mikeandwan_us/tasks/maw_postgres_restore_db.yml
@@ -15,7 +15,7 @@
       - '-c'
       - SELECT 1;
     state: started
-  ignore_errors: yes
+  ignore_errors: true
 
 - name: "get {{ db_name }} exists test result"
   ansible.builtin.include_tasks: wait_for_container_to_stop.yml
@@ -31,8 +31,8 @@
     env_file: "{{ mawus_config.podman_env_dir }}/maw-postgres.env"
     command: "pg_restore -h 127.0.0.1 -U postgres -C -d postgres /postgres_init/{{ backup_file }}"
     state: started
-    interactive: yes
-    rm: yes
+    interactive: true
+    rm: true
     volume:
       - "{{ pginit_dir }}:/postgres_init:rw,Z"
   when: sql_test_result | int == 2
@@ -60,8 +60,8 @@
       - '-c'
       - VACUUM ANALYZE;
     state: started
-    interactive: yes
-    rm: yes
+    interactive: true
+    rm: true
   when: sql_test_result | int == 2
 
 - name: wait for idsrv optimization
