--- a/playbook_test_pgbackup.yml
+++ b/playbook_test_pgbackup.yml
@@ -7,11 +7,12 @@
       ansible.builtin.include_role:
         name: postgres_backup_database
       vars:
-        db_name: maw_website
-        service_name: "test-postgres-backup-mawus"
-        systemd_dir: "/home/mmorano/.config/systemd/user"
-        pod_name: "local-maw-pod"
-        volume_name: "local-maw-postgres-14"
-        env_file: "/home/mmorano/_maw/local/podman-env/maw-postgres.env"
-        postgres_version: "14"
-        calendar: 01:00:00
+        pg_backupdb_ctx:
+          db_name: maw_website
+          service_name: "test-postgres-backup-mawus"
+          systemd_dir: "/home/mmorano/.config/systemd/user"
+          pod_name: "local-maw-pod"
+          volume_name: "local-maw-postgres-14"
+          env_file: "/home/mmorano/_maw/local/podman-env/maw-postgres.env"
+          postgres_version: "14"
+          calendar: 01:00:00
