--- a/playbook_test_pgbackup_roles.yml
+++ b/playbook_test_pgbackup_roles.yml
@@ -7,10 +7,11 @@
       ansible.builtin.include_role:
         name: postgres_backup_roles
       vars:
-        service_name: test-postgres-backup-roles
-        systemd_dir: "/home/mmorano/.config/systemd/user"
-        pod_name: local-maw-pod
-        volume_name: local-maw-postgres-14
-        env_file: "/home/mmorano/_maw/local/podman-env/maw-postgres.env"
-        postgres_version: 14
-        calendar: 01:00:00
+        pg_backup_roles_ctx:
+          service_name: test-postgres-backup-roles
+          systemd_dir: "/home/mmorano/.config/systemd/user"
+          pod_name: local-maw-pod
+          volume_name: local-maw-postgres-14
+          env_file: "/home/mmorano/_maw/local/podman-env/maw-postgres.env"
+          postgres_version: 14
+          calendar: 01:00:00
