--- a/roles/postgres_optimize/tasks/main.yml
+++ b/roles/postgres_optimize/tasks/main.yml
@@ -7,3 +7,9 @@
 - name: Configure systemd job to optimize database
   ansible.builtin.include_role:
     name: systemd_job
+  vars:
+    systemd_job_ctx:
+      systemd_dir: "{{ pg_optimize_ctx.systemd_dir }}"
+      service_name: "{{ pg_optimize_ctx.service_name }}"
+      service_template: "{{ service_template }}"
+      timer_template: "{{ timer_template }}"
