--- a/roles/mikeandwan_us/tasks/maw_maintenance.yml
+++ b/roles/mikeandwan_us/tasks/maw_maintenance.yml
@@ -13,13 +13,9 @@
       - solr-indexer.timer
     services_prod:
       - certbot-renew.service
-      - remote-archive-daily.service
-      - remote-archive-monthly.service
       - reverse-geocode.service
     timers_prod:
       - certbot-renew.timer
-      - remote-archive-daily.timer
-      - remote-archive-monthly.timer
       - reverse-geocode.timer
 
 - name: Merge services and timers
@@ -52,6 +48,8 @@
     pg_backup_roles_ctx:
       service_name: "{{ mawus_config.env }}-postgres-backup-roles"
       systemd_dir: "{{ home }}/.config/systemd/user"
+      start_job: false
+      enable_job: "{{ mawus_config.env == 'prod' }}"
       pod_name: "{{ mawus_config.podman_podname }}"
       volume_name: "{{ postgres_backup_volume.volume.Name }}"
       env_file: "{{ mawus_config.podman_env_dir }}/maw-postgres.env"
@@ -67,6 +65,8 @@
     - db_name: maw_website
       service_name: "{{ mawus_config.env }}-postgres-backup-mawus"
       systemd_dir: "{{ home }}/.config/systemd/user"
+      start_job: false
+      enable_job: "{{ mawus_config.env == 'prod' }}"
       pod_name: "{{ mawus_config.podman_podname }}"
       volume_name: "{{ postgres_backup_volume.volume.Name }}"
       env_file: "{{ mawus_config.podman_env_dir }}/maw-postgres.env"
@@ -76,6 +76,8 @@
     - db_name: idsrv
       service_name: "{{ mawus_config.env }}-postgres-backup-idsrv"
       systemd_dir: "{{ home }}/.config/systemd/user"
+      start_job: false
+      enable_job: "{{ mawus_config.env == 'prod' }}"
       pod_name: "{{ mawus_config.podman_podname }}"
       volume_name: "{{ postgres_backup_volume.volume.Name }}"
       env_file: "{{ mawus_config.podman_env_dir }}/maw-postgres.env"
@@ -91,6 +93,8 @@
     - db_name: maw_website
       service_name: "{{ mawus_config.env }}-postgres-optimize-mawus"
       systemd_dir: "{{ home }}/.config/systemd/user"
+      start_job: false
+      enable_job: "{{ mawus_config.env == 'prod' }}"
       pod_name: "{{ mawus_config.podman_podname }}"
       env_file: "{{ mawus_config.podman_env_dir }}/maw-postgres.env"
       postgres_version: "{{ mawus_config.version_postgres }}"
@@ -99,6 +103,8 @@
     - db_name: idsrv
       service_name: "{{ mawus_config.env }}-postgres-optimize-idsrv"
       systemd_dir: "{{ home }}/.config/systemd/user"
+      start_job: false
+      enable_job: "{{ mawus_config.env == 'prod' }}"
       pod_name: "{{ mawus_config.podman_podname }}"
       env_file: "{{ mawus_config.podman_env_dir }}/maw-postgres.env"
       postgres_version: "{{ mawus_config.version_postgres }}"
@@ -111,7 +117,37 @@
     pg_cleanup_ctx:
       service_name: "{{ mawus_config.env }}-postgres-cleanup"
       systemd_dir: "{{ home }}/.config/systemd/user"
+      start_job: false
+      enable_job: "{{ mawus_config.env == 'prod' }}"
       pod_name: "{{ mawus_config.podman_podname }}"
       volume_name: "{{ postgres_backup_volume.volume.Name }}"
       postgres_version: "{{ mawus_config.version_postgres }}"
       calendar: 01:20:00
+
+- name: Configure Postgres GDrive Daily Archive
+  ansible.builtin.include_role:
+    name: postgres_gdrive_archive
+  vars:
+    postgres_gdrive_archive_ctx:
+      service_name: "{{ mawus_config.env }}-postgres-archive-daily"
+      systemd_dir: "{{ home }}/.config/systemd/user"
+      pod_name: "{{ mawus_config.podman_podname }}"
+      files_to_archive_volume: "{{ postgres_backup_volume.volume.Name }}"
+      creds_volume: "{{ gdrive_creds_volume.volume.Name }}"
+      archive_folder: "{{ mawus_config.podman_podname }}-{{ ansible_host }}-pg_backup"
+      retain_archive_duration: 10d
+      calendar: 01:25:00
+
+- name: Configure Postgres GDrive Monthly Archive
+  ansible.builtin.include_role:
+    name: postgres_gdrive_archive
+  vars:
+    postgres_gdrive_archive_ctx:
+      service_name: "{{ mawus_config.env }}-postgres-archive-monthly"
+      systemd_dir: "{{ home }}/.config/systemd/user"
+      pod_name: "{{ mawus_config.podman_podname }}"
+      files_to_archive_volume: "{{ postgres_backup_volume.volume.Name }}"
+      creds_volume: "{{ gdrive_creds_volume.volume.Name }}"
+      archive_folder: "{{ mawus_config.podman_podname }}-{{ ansible_host }}-pg_backup-monthly"
+      retain_archive_duration: 2y
+      calendar: '*-*-01 01:30:00'
