--- a/playbook_mawus_local.yml
+++ b/playbook_mawus_local.yml
@@ -17,11 +17,10 @@
           - dotnet
           - git
           - nodejs
-          - podman
 
-    - name: Configure podman
+    - name: Initialize podman
       ansible.builtin.include_role:
-        name: podman
+        name: podman_init
       vars:
         podman_users:
           - "{{ mawus_config.service_account }}"
