--- a/playbook_mawus_prod.yml
+++ b/playbook_mawus_prod.yml
@@ -30,9 +30,9 @@
           - "{{ ansible_user }}"
           - "{{ mawus_config.service_account.username }}"
 
-    - name: Configure podman
+    - name: Initialize podman
       ansible.builtin.include_role:
-        name: podman
+        name: podman_init
       vars:
         podman_users:
           - "{{ mawus_config.service_account }}"
