--- a/roles/sshd/tasks/add_users.yml
+++ b/roles/sshd/tasks/add_users.yml
@@ -38,10 +38,14 @@
 - name: Flush handlers
   ansible.builtin.meta: flush_handlers
 
+- name: set current ssh server
+  ansible.builtin.set_fact:
+    current_ssh_server: "{{ ansible_host }}"
+
 - name: validate ssh
   delegate_to: localhost
   ansible.builtin.command:
-    cmd: ssh {{ username }}@{{ ansible_host }} "echo success"
+    cmd: ssh {{ username }}@{{ current_ssh_server }} "echo success"
   register: validate_ssh_output
   changed_when: false
 
