updates to configure ddclient in prod

--- a/inventories/inventory_prod.yml
+++ b/inventories/inventory_prod.yml
@@ -2,8 +2,6 @@
 all:
   children:
 
-    servers:
+    ddclient:
       hosts:
         tifa:
-          hostname: tifa
-          ansible_user: mmorano
