--- a/roles/ddclient/tasks/main.yml
+++ b/roles/ddclient/tasks/main.yml
@@ -32,11 +32,21 @@
 # stop pod via systemd, otherwise systemd and podman fight
 - name: "Disable {{ ddclient_config.podman_podname }} via systemd"
   ansible.builtin.systemd:
-    name: "pod-{{ ddclient_config.systemd_pod_service }}"
+    name: "pod-{{ ddclient_config.podman_podname }}"
     enabled: false
     state: stopped
     scope: user
   ignore_errors: true # nothing to stop if it doesn't exist
+
+- name: get pod info
+  containers.podman.podman_pod_info:
+    name: "{{ ddclient_config.podman_podname }}"
+  register: podinfo
+
+- name: stop pod if running
+  containers.podman.podman_pod:
+    state: stopped
+  when: (podinfo.pods | length > 0) and (podinfo.pods[0].State == 'Running')
 
 - name: "Create pod {{ ddclient_config.podman_podname }}"
   containers.podman.podman_pod:
