create scripts to run workstation and mawus_dev playbooks and related cleanup

--- a/inventories/inventory_workstation.yml
+++ b/inventories/inventory_workstation.yml
@@ -7,8 +7,9 @@ all:
         barett:
         aeris:
         vincent:
+        lvmwstest:
 
-    mawus_local_dev:
+    mawus_dev:
       hosts:
         barett:
         aeris:
