--- a/inventories/inventory_test.yml
+++ b/inventories/inventory_test.yml
@@ -2,14 +2,17 @@
 all:
   children:
 
-    servers:
-      hosts:
-        vmtest:
-
     workstations:
       hosts:
+        lvmtest:
         vmwstest:
 
     ddclient:
       hosts:
+        lvmtest:
+        vmtest:
+
+    mawus:
+      hosts:
+        lvmtest:
         vmtest:
