--- a/roles/mikeandwan_us/tasks/maw_pod.yml
+++ b/roles/mikeandwan_us/tasks/maw_pod.yml
@@ -26,6 +26,17 @@
     scope: user
   ignore_errors: true # nothing to stop if it doesn't exist
 
+- name: get pod info
+  containers.podman.podman_pod_info:
+    name: "{{ mawus_config.podman_podname }}"
+  register: podinfo
+
+- name: stop pod if running
+  containers.podman.podman_pod:
+    name: "{{ mawus_config.podman_podname }}"
+    state: stopped
+  when: (podinfo.pods | length > 0) and (podinfo.pods[0].State == 'Running')
+
 - name: "create {{ mawus_config.podman_podname }} pod"
   containers.podman.podman_pod:
     name: "{{ mawus_config.podman_podname }}"
